# simd-experiment

./: CMakeLists.txt  README.md  commons.h  generate_data.cpp  main.cpp  result.txt  vcpkg.json
